--- a/Resources/Private/Templates/PageGrid/Main.html
+++ b/Resources/Private/Templates/PageGrid/Main.html
@@ -11,35 +11,33 @@
 </f:comment>
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
-
-      <div class="tx-dlf-pagegrid">
-        <f:widget.paginate objects="{pageGridEntries}" as="paginatedEntries" configuration="{settings.paginate}">
-            <ol class="tx-dlf-pagegrid-list">
-                <f:for each="{paginatedEntries}" as="entry" iteration="iterator">
-                    <li class="tx-dlf-pagegrid-{entry.state}" value="{entry.page}">
-                        <div class="tx-dlf-pagegrid-thumbnail">
-                            <f:link.page pageUid="{settings.targetPid}" additionalParams="{'tx_dlf[id]': docUid, 'tx_dlf[page]': entry.page}">
-                                <f:if condition="{entry.thumbnail}">
-                                    <f:then>
-                                        <img src="{entry.thumbnail}" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" />
-                                    </f:then>
-                                    <f:else>
-                                        <f:if condition="{settings.placeholder}">
-                                            <f:then>
-                                                <f:image src="{settings.placeholder}" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" maxWidth="250" />
-                                            </f:then>
-                                            <f:else>
-                                                <f:image src="EXT:dlf/Resources/Public/Images/PageGridPlaceholder.jpg" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" maxWidth="250" />
-                                            </f:else>
-                                        </f:if>
-                                    </f:else>
-                                </f:if>
-                                <div class="tx-dlf-pagegrid-pagination">{entry.pagination}</div>
-                            </f:link.page>
-                        </div>
-                    </li>
-                </f:for>
-            </ol>
-        </f:widget.paginate>
+    <div class="tx-dlf-pagegrid">
+        <ol class="tx-dlf-pagegrid-list">
+            <f:for each="{paginator.paginatedItems}" as="entry" iteration="iterator">
+                <li class="tx-dlf-pagegrid-{entry.state}" value="{entry.page}">
+                    <div class="tx-dlf-pagegrid-thumbnail">
+                        <f:link.page pageUid="{settings.targetPid}" additionalParams="{'tx_dlf[id]': docUid, 'tx_dlf[page]': entry.page}">
+                            <f:if condition="{entry.thumbnail}">
+                                <f:then>
+                                    <img src="{entry.thumbnail}" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" />
+                                </f:then>
+                                <f:else>
+                                    <f:if condition="{settings.placeholder}">
+                                        <f:then>
+                                            <f:image src="{settings.placeholder}" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" maxWidth="250" />
+                                        </f:then>
+                                        <f:else>
+                                            <f:image src="EXT:dlf/Resources/Public/Images/PageGridPlaceholder.jpg" alt="{f:translate(key: 'thumbnail')} {f:translate(key: 'page')} {entry.pagination}" title="{f:translate(key: 'page')} {entry.pagination}" maxWidth="250" />
+                                        </f:else>
+                                    </f:if>
+                                </f:else>
+                            </f:if>
+                            <div class="tx-dlf-pagegrid-pagination">{entry.pagination}</div>
+                        </f:link.page>
+                    </div>
+                </li>
+            </f:for>
+        </ol>
+        <f:render partial="Lists/Pagination" arguments="{_all}" />
     </div>
 </html>
